# rootsentry

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: FLEET_ANALYSIS.md
examples/: catalog.txt  evidence.android.json  fleet.android.json  help.txt
reference/: android_RootCheck.kt  ios_JailbreakCheck.swift
rootsentry/: __init__.py  catalog.py  cli.py  engine.py  fleet.py
tests/: test_catalog_integrity.py  test_cli.py  test_cli_extra.py  test_datafeeds_offline.py  test_engine.py  test_engine_extra.py  test_fleet.py
tests/fixtures/: attack-mobile.data
